--- a/css/style.css
+++ b/css/style.css
@@ -46,13 +46,63 @@ img {
     margin-bottom: 40px;
 }
 
-.subtitulo::after {
+.subtitulo:after {
     content: "";
     display: block;
     width: 60px;
     height: 3px;
     background-color: #000000;
     margin: 15px auto;
+}
+
+.subtituloInterno {
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 30px;
+    letter-spacing: .1em;
+    color: #000000;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+}
+
+.subtituloInterno:after {
+    content: "";
+    display: block;
+    width: 60px;
+    height: 3px;
+    background-color: #000000;
+    margin: 15px 0px;
+}
+
+/* Introdução Interna */
+
+.introducaoInterna {
+    width: 100%;
+    margin-top: 91px;
+    height: 160px;
+    text-align: center;
+    color: #ffffff;
+    padding-top: 30px;
+}
+
+.introducaoInterna p {
+    padding-top: 15px;
+}
+
+.introducaoInterna h1 {
+    font-size: 36px;
+    color: #ffffff;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+.introducaoInterna h1:after {
+    content: "";
+    display: block;
+    width: 60px;
+    height: 3px;
+    background-color: #ffffff;
+    margin: 6px auto;
 }
 
 /* Header */
@@ -89,6 +139,10 @@ img {
 }
 
 .headerMenu ul li a:hover {
+    color: #ffffff;
+}
+
+.headerMenu ul li a.menuAtivo {
     color: #ffffff;
 }
 
